# CrewAI-test2

./: README.md
fa_agents/: README.md  pyproject.toml
fa_agents/inputs/functional_specification/: readme.txt
fa_agents/inputs/meet_notes/: meet_note_34536.md  meet_note_34614.md
fa_agents/knowledge/samples/CL_samples/: Changelog.md  readme.txt
fa_agents/knowledge/samples/CRs_samples/: CHANGE REQUEST 34536.md  CHANGE REQUEST 34614.md  CHANGE REQUEST 34991.md  CHANGE REQUEST SAMPLE.md  readme.txt
fa_agents/outputs/: CL_20240614.md
fa_agents/outputs/change_requests/: CR34536.md  CR34614.md  SUGESTAO_ATUALIZACAO_ESPEC_FUNCIONAL_20240614.md
fa_agents/src/fa_agents/: crew.py  main.py
fa_agents/src/fa_agents/config/: agents.yaml  tasks.yaml
fa_agents/src/fa_agents/tools/: requirements_tools.py
