[project]
name = "fa_agents"
version = "0.1.0"
description = "FA_Agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
fa_agents = "fa_agents.main:run"
run_crew = "fa_agents.main:run"
train = "fa_agents.main:train"
replay = "fa_agents.main:replay"
test = "fa_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
